--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   cloud_firestore: ^5.4.4
   firebase_messaging: ^15.1.3
   events_emitter: ^0.5.2
+  modal_bottom_sheet: ^3.0.0
 
 dev_dependencies:
   flutter_test:
